fix: do not wrap code in smaller widths

--- a/_includes/css/code.css
+++ b/_includes/css/code.css
@@ -44,7 +44,6 @@ pre::after {
 }
 
 pre {
-  white-space: pre-wrap;
   position: relative;
 }
 
